[gd_scene load_steps=5 format=3 uid="uid://2hmpuo8qblwe"]

[ext_resource type="Script" uid="uid://bp3igkhbwlg5m" path="res://scripts/fps_controller.gd" id="1_u7epq"]
[ext_resource type="PackedScene" uid="uid://casjfhonfstyb" path="res://models/rubber_duck_toy_4k.gltf/rubber_duck_toy_4k.gltf" id="2_jr1ti"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f6xud"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jr1ti"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_u7epq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_f6xud")

[node name="WorldModel" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_jr1ti")

[node name="rubber_duck_toy" parent="WorldModel" instance=ExtResource("2_jr1ti")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 1.9787873, 0)

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79, 0)

[node name="CameraSmooth" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Head/CameraSmooth"]
unique_name_in_owner = true
cull_mask = 1048573

[node name="StairsAheadRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56624234, -0.7185335)
target_position = Vector3(0, -0.55, 0)

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -0.75, 0)
